<resources>
    <string name="app_name">FeedZie App</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_pins">My Pins</string>
    <string name="receive">Receive</string>
    <string name="food_map">Food Map</string>
    <string name="donate">Donate</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="My_dashboard">My Dashboard</string>
    <string name="rcv">rcv</string>
    <string name="map">map</string>
    <string name="mypins">mypins</string>
    <string name="about">about</string>
    <string name="contact">contact</string>
    <string name="lgout">lgout</string>
    <string name="welcome">Welcome</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="About">About us</string>
    <string name="prompt_email">prompt_email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone no</string>
    <string name="name">Name :</string>
    <string name="Password">Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="About_us">FeedZie provides the right channels for compassionate citizens to begin and manage initiatives, that solve for hunger locally. Our mission is to make India hunger free.</string>
    <string name="instagram">Instagram</string>
    <string name="Instagram" />
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="version_1">version 1.0.0</string>
    <string name="Email">Email</string>
    <string name="Message">Message</string>
    <string name="submit">Submit</string>
    <string name="Donor_name">Donor name</string>
    <string name="food_name">Food name</string>
    <string name="description">Description</string>
    <string name="foodmap">Food Map</string>
    <string name="delete">Delete</string>
    <string name="mypin">My pin</string>
    <string name="receiver_name">Reciever name</string>
    <string name="your_name">Your name</string>
    <string name="type_here">Type here</string>
    <string name="Name">Name</string>
    <string name="type">Type</string>
    <string name="not_registered_click_here">Not Registered! Click here</string>
    <string name="Not_registered_click_here">Not_registered! click here</string>
    <string name="nameError">nameError</string>
    <string name="email_error">email error</string>
    <string name="error_invalid_email">error_invalid_email</string>
    <string name="phone_error">phone_error</string>
    <string name="name_error">name_error</string>
    <string name="donor_name">donor name</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>
    <string name="action_settings">Action_settings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New password</string>
    <string name="reset">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="min_1">Min: 1</string>
    <string name="max_500">Max: 500</string>
    <string name="photos">Photos</string>
    <string name="quantity_1_people">Quantity: 1 people</string>
    <string name="todo">TODO</string>
    <string name="i_assure_that_food_quality_and_hygiene_has_been_maintained">I assure that food quality and hygiene has been maintained</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_your_donations">View your donations</string>
    <string name="nearby_ngo">Nearby NGO\'S</string>
    <string name="Settings">Settings</string>
    <string name="report_issues">Report issues</string>
    <string name="FeedZie">FeedZie</string>
    <string name="make_donation">Make donation</string>
    <string name="address">Address</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="Open">Open</string>
    <string name="Close">Close\n</string>
</resources>