<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".About">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:fontFamily="@font/"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"/>

        <ImageView
            android:layout_width="176dp"
            android:layout_height="169dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunitosans_light"
            android:text="@string/About_us"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                tools:ignore="KeyboardInaccessibleWidget">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40sp"
                    android:layout_marginEnd="10sp"
                    android:src="@drawable/instagram"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/merienda_one"
                    android:text="@string/instagram"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                tools:ignore="KeyboardInaccessibleWidget">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/facebook"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/merienda_one"
                    android:text="@string/facebook"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/merienda_one"
                android:text="@string/twitter"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_one"
            android:text="@string/version_1"
            android:textColor="@color/black"
            android:paddingTop="30sp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>